# pigeon

./: .gitignore  LICENSE  README.md  build-windows.bat  generate-icons.js  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: release.yml
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
