[package]
name = "pigeon"
version = "1.0.0"
description = "A modern HTTP client"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "pigeon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
mime_guess = "2"
